--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/lodash-es": "^4.17.12",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
+		"@vitejs/plugin-basic-ssl": "^1.1.0",
 		"autoprefixer": "^10.4.16",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
